--- a/src/ref.bib
+++ b/src/ref.bib
@@ -65,12 +65,108 @@
 	title = {Art {Made} by {AI} {Wins} {Fine} {Arts} {Competition} - {Impakter}},
 	howpublished = {https://impakter.com/art-made-by-ai-wins-fine-arts-competition/.},
 }
-@misc{VTuber2022Stable,
+@misc{Aoi2022Stable,
 	note = {[Online; accessed 2022-12-04]},
-	author = {(VTuber), Len Aoi},
+	author = {Aoi, Len},
 	year = {2022},
 	month = {aug 25},
 	title = {Stable {Diffusion} and {Midjourney} can even understand ``kawaii.'' {Anime}-style characters created by {AI} image generators},
 	howpublished = {https://automaton-media.com/en/news/20220825-15224/.},
+}
+@inproceedings{Karras2020Analyzing,
+    note = {[Online; accessed 2022-12-04]},
+    author = {Karras, Tero and Laine, Samuli and Aittala, Miika and Hellsten, Janne and Lehtinen, Jaakko and Aila, Timo},
+    booktitle = {2020 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} ({CVPR})},
+    year = {2020},
+    month = {6},
+    organization = {IEEE},
+    title = {Analyzing and {Improving} the {Image} {Quality} of {StyleGAN}},
+}
+
+@inproceedings{pmlr-v37-gregor15,
+  title = 	 {DRAW: A Recurrent Neural Network For Image Generation},
+  author = 	 {Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo and Wierstra, Daan},
+  booktitle = 	 {Proceedings of the 32nd International Conference on Machine Learning},
+  pages = 	 {1462--1471},
+  year = 	 {2015},
+  editor = 	 {Bach, Francis and Blei, David},
+  volume = 	 {37},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Lille, France},
+  month = 	 {07--09 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v37/gregor15.pdf},
+  abstract = 	 {This paper introduces the Deep Recurrent Attentive Writer (DRAW) architecture for image generation with neural networks. DRAW networks combine a novel spatial attention mechanism that mimics the foveation of the human eye, with a sequential variational auto-encoding framework that allows for the iterative construction of complex images. The system substantially improves on the state of the art for generative models on MNIST, and, when trained on the Street View House Numbers dataset, it is able to generate images that are indistinguishable from real data with the naked eye.}
+}
+@InProceedings{Qiao_2019_CVPR,
+author = {Qiao, Tingting and Zhang, Jing and Xu, Duanqing and Tao, Dacheng},
+title = {MirrorGAN: Learning Text-To-Image Generation by Redescription},
+booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2019}
+},
+@inproceedings{NEURIPS2019_1d72310e,
+ author = {Li, Bowen and Qi, Xiaojuan and Lukasiewicz, Thomas and Torr, Philip},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Controllable Text-to-Image Generation},
+ url = {https://proceedings.neurips.cc/paper/2019/file/1d72310edc006dadf2190caad5802983-Paper.pdf},
+ volume = {32},
+ year = {2019}
+}
+@inproceedings{NIPS2016_b1301141,
+ author = {van den Oord, Aaron and Kalchbrenner, Nal and Espeholt, Lasse and kavukcuoglu, koray and Vinyals, Oriol and Graves, Alex},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {D. Lee and M. Sugiyama and U. Luxburg and I. Guyon and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {Conditional Image Generation with PixelCNN Decoders},
+ url = {https://proceedings.neurips.cc/paper/2016/file/b1301141feffabac455e1f90a7de2054-Paper.pdf},
+ volume = {29},
+ year = {2016}
+}
+@article{Goodfellow2020Generative,
+    note = {[Online; accessed 2022-12-05]},
+    author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+    journal = {Communications of the ACM},
+    number = {11},
+    year = {2020},
+    month = {oct 22},
+    pages = {139--144},
+    publisher = {Association for Computing Machinery (ACM)},
+    title = {Generative adversarial networks},
+    volume = {63},
+}
+@InProceedings{He_2022_CVPR,
+    author    = {He, Kaiming and Chen, Xinlei and Xie, Saining and Li, Yanghao and Doll\'ar, Piotr and Girshick, Ross},
+    title     = {Masked Autoencoders Are Scalable Vision Learners},
+    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month     = {June},
+    year      = {2022},
+    pages     = {16000-16009}
+}
+@website{Midjourney,
+	year = {2022},
+	title = {Midjourney.com},
+	url = {https://www.midjourney.com}
+}
+
+@book{Yano2013Pink,
+    note = {[Online; accessed 2022-12-04]},
+    author = {Yano, Christine R.},
+    year = {2013},
+    month = {apr 29},
+    pages = {153--167},
+    publisher = {Duke University Press},
+    title = {Pink {Globalization}: Hello {Kitty}'s {Trek} {Across} the {Pacific}},
+}
+
+@software{WaifuDiffusion,
+author = {harubaru},
+title = {{Waifu Diffusion}},
+url = {https://github.com/harubaru/waifu-diffusion},
+year = {2022}
 }
 
