--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,3 +1,44 @@
 \subsection*{Introduction}
+\par
+Computer vision and image processing is one of the most popular field of computer science. 
+Scientists interprets images as matrices, as images are displaced as a rectangular formation of pixels on our screen.
+The academia and industry has mad multiple attempts to generate high quality images
+\cite{
+    pmlr-v37-gregor15, 
+    Qiao_2019_CVPR, 
+    NEURIPS2019_1d72310e, 
+    NIPS2016_b1301141,
+    Goodfellow2020Generative,
+    Rombach2022High,
+    He_2022_CVPR,
+}.
+The task of image generation also various,
+but the most studied directions are 
+random noise to image,
+text description to image,
+and incomplete image to completed image.
+Among these models, Generative Adversarial Networks (GAN) \cite{Goodfellow2020Generative} and Latent Diffusion Models \cite{Rombach2022High} are more commonly used for images that are related to art, for example, photography and drawing.
 
-aaa
+\par
+The wave of generative AI is not limited to the computer science related academia and industry. 
+Jason Allen's artifact created with Midjourney\cite{Midjourney} won the first place at the Colorado State Fair;s fine arts competition in September 2022 \cite{Teoh2022Art}.
+The editor Teoh \cites{Teoh2022Art} further reported that 
+``Although the two judges were unaware that Allen's submission was AI-generated, but they added that it wouldn't change their decision because they were looking for `how the art tells a story and how it invokes spirit' instead.''
+This clear indicates that the text-to-image generation are capable for storying telling and spirit invoking based on the inputted text description.
+
+\par
+Aoi also stated that generative models are about to capture human's feelings toward the objects from the text input \cite{Aoi2022Stable}.
+Aoi illustrate that both Midjourney and Diffusion model can understand
+{\it kawaii} (cute).
+{\it Kawaii} is the signature of broadening Japanese culture to the global,
+which was created at the time Japanese domestic focus shifted from production to consumption \cite{Yano2013Pink}.
+Based on that idea,
+% ! use of I
+I argue that text-to-image models also has the power to generate anime girl characters,
+which is one of the most reflective genre of the Japanese idea of {\it kawaii}.
+In fact, there are examples of customized version of both GAN and Diffusion for anime character generation
+\cite{
+    Jin2017Towards,
+    Ruan2022Anime,
+    WaifuDiffusion,
+}.
