add GAN models to intro

--- a/src/intro.tex
+++ b/src/intro.tex
@@ -41,4 +41,6 @@ In fact, there are examples of customized version of both GAN and Diffusion for 
     Jin2017Towards,
     Ruan2022Anime,
     WaifuDiffusion,
+    chong2021gans,
+    chong2021jojogan,
 }.
