--- a/src/ref.bib
+++ b/src/ref.bib
@@ -170,3 +170,18 @@ url = {https://github.com/harubaru/waifu-diffusion},
 year = {2022}
 }
 
+@misc{chong2021gans,
+      title={GANs N' Roses: Stable, Controllable, Diverse Image to Image Translation (works for videos too!)}, 
+      author={Min Jin Chong and David Forsyth},
+      year={2021},
+      eprint={2106.06561},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{chong2021jojogan,
+  title={JoJoGAN: One Shot Face Stylization},
+  author={Chong, Min Jin and Forsyth, David},
+  journal={arXiv preprint arXiv:2112.11641},
+  year={2021}
+}
