add StyleGAN based models

--- a/src/ref.bib
+++ b/src/ref.bib
@@ -185,3 +185,15 @@ year = {2022}
   journal={arXiv preprint arXiv:2112.11641},
   year={2021}
 }
+
+@inproceedings{Karras2019Style,
+	note = {[Online; accessed 2022-12-04]},
+	author = {Karras, Tero and Laine, Samuli and Aila, Timo},
+	booktitle = {2019 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} ({CVPR})},
+	year = {2019},
+	month = {6},
+	organization = {IEEE},
+	title = {A {Style}-{Based} {Generator} {Architecture} for {Generative} {Adversarial} {Networks}},
+}
+
+
