add ref to CouncilGAN

--- a/src/intro.tex
+++ b/src/intro.tex
@@ -41,6 +41,7 @@ In fact, there are examples of customized version of both GAN and Diffusion for 
     Jin2017Towards,
     Ruan2022Anime,
     WaifuDiffusion,
+    nizan2020council,
     chong2021gans,
     chong2021jojogan,
 }.
