--- a/src/ref.bib
+++ b/src/ref.bib
@@ -196,4 +196,10 @@ year = {2022}
 	title = {A {Style}-{Based} {Generator} {Architecture} for {Generative} {Adversarial} {Networks}},
 }
 
+@inproceedings{nizan2020council,
+  title={Breaking the Cycle - Colleagues are all you need},
+  author={Ori Nizan and Ayellet Tal},
+  booktitle={IEEE conference on computer vision and pattern recognition (CVPR)},
+  year={2020}
+}
 
