--- a/src/intro.tex
+++ b/src/intro.tex
@@ -17,7 +17,7 @@ but the most studied directions are
 random noise to image,
 text description to image,
 and incomplete image to completed image.
-Among these models, Generative Adversarial Networks (GAN) \cite{Goodfellow2020Generative} and Latent Diffusion Models \cite{Rombach2022High} are more commonly used for images that are related to art, for example, photography and drawing.
+Among these models, Generative Adversarial Networks (GAN) \cite{Goodfellow2020Generative} and Latent Diffusion Models (LDM) \cite{Rombach2022High} are more commonly used for images that are related to art, for example, photography and drawing.
 
 \par
 The wave of generative AI is not limited to the computer science related academia and industry. 
