--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,7 +1,7 @@
 \subsection*{Introduction}
 \par
 Computer vision and image processing is one of the most popular field of computer science. 
-Scientists interprets images as matrices, as images are displaced as a rectangular formation of pixels on our screen.
+Scientists interpret images as matrices, as images are displaced as a rectangular formation of pixels on our screen.
 The academia and industry has mad multiple attempts to generate high quality images
 \cite{
     pmlr-v37-gregor15, 
@@ -21,13 +21,13 @@ Among these models, Generative Adversarial Networks (GAN) \cite{Goodfellow2020Ge
 
 \par
 The wave of generative AI is not limited to the computer science related academia and industry. 
-Jason Allen's artifact created with Midjourney\cite{Midjourney} won the first place at the Colorado State Fair;s fine arts competition in September 2022 \cite{Teoh2022Art}.
+Jason Allen's artifact created with Midjourney\cite{Midjourney} won the first place at the Colorado State Fair's fine arts competition in September 2022 \cite{Teoh2022Art}.
 The editor Teoh \cites{Teoh2022Art} further reported that 
 ``Although the two judges were unaware that Allen's submission was AI-generated, but they added that it wouldn't change their decision because they were looking for `how the art tells a story and how it invokes spirit' instead.''
-This clear indicates that the text-to-image generation are capable for storying telling and spirit invoking based on the inputted text description.
+This clear indicates that the text-to-image generation are capable for story telling and spirit invoking based on the inputted text description.
 
 \par
-Aoi also stated that generative models are about to capture human's feelings toward the objects from the text input \cite{Aoi2022Stable}.
+Aoi also stated that generative models are about to capture human feelings toward the objects from the text input \cite{Aoi2022Stable}.
 Aoi illustrate that both Midjourney and Diffusion model can understand
 {\it kawaii} (cute).
 {\it Kawaii} is the signature of broadening Japanese culture to the global,
