add industry (main) section

--- a/src/ref.bib
+++ b/src/ref.bib
@@ -203,3 +203,29 @@ year = {2022}
   year={2020}
 }
 
+
+@inbook{takahashi2008shojo,
+  place     = {Armonk},
+  title     = {Opening the Closed World of Shojo Manga},
+  booktitle = {Japanese visual culture explorations in the world of manga of Anime},
+  publisher = {M.E.Sharpe},
+  author    = {Takahashi, Mizuki},
+  editor    = {MacWillliams, Mark W.Editor},
+  year      = {2008},
+  pages     = {114-136}
+} 
+
+@misc{Sahbegovic2022anime,
+	note = {[Online; accessed 2022-12-05]},
+	author = {Sahbegovic, Alan},
+	year = {2022},
+	title = {AI-generated art is getting a lot of hate from anime conventions and the fandom},
+	howpublished = {https://www.sportskeeda.com/anime/ai-generated-art-getting-lot-hate-anime-conventions-fandom.},
+}
+
+@misc{NihongoGamer2022drawing,
+  author       = {NihongoGamer and Wolf, Yazuki},
+  howpublished = {https://youtu.be/uzEmLZ93xVE?t=428.},
+  title        = {AI ART: Good or Bad for the Anime Industry?},
+  year         = {2022}
+}
