--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,10 @@
 \usepackage{times}
 \geometry{top=1.0in, bottom=1.0in, left=1.0in, right=1.0in}
 
+
+\usepackage{caption}
+\usepackage{subcaption}
+
 %
 %Doublespacing
 %
