--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,1 +1,17 @@
 \subsection*{Conclusion}
+
+Although the booming of AI-drawing after the release of LDMs has also increased
+the possible of anime drawing by AI,
+there are still concerns about AI anime-drawing.
+The first issue is that machine learning models often pay more attention on common features
+in the training dataset,
+instead trying to understand the reason that led to these features.
+For example, shojo style is a way to represent the emotion and psychological movements,
+but is not the goal of anime drawing.
+Secondly, there are still remaining ethical issue on AI anime drawing.
+These two issues should be considered when integrating AI models into the production.
+Furthermore, style learning based on GAN requires high quality data that has similar styles and large in amount,
+whereas text-to-image generating models cannot keep the consistency of style of a character,
+thus is hard to use in real anime production.
+Therefore, style-controlled LDMs might have great potential in the anime industry if 
+both issues, especially ethical issue, can be resolved.
