change LDM1 picture since not related to anime

--- a/src/background.tex
+++ b/src/background.tex
@@ -59,8 +59,8 @@ L_{L D M}:=\mathbb{E}_{\mathcal{E}(x), \epsilon \sim \mathcal{N}(0,1), t}\left[\
 $$
 
 As StyleGAN models specialized on image-to-image generation,
-LDMs shows surprising results on text-to-image generation as shown in Figure 3.
-\begin{figure}[]
+LDMs shows surprising results on text-to-image generation.
+\begin{figure}[h]
     \includegraphics[width=\textwidth]{img/LDM-1.png}
     \caption{
         Latent Diffusion Models:
@@ -73,10 +73,10 @@ When we apply LDM to anime characters,
 we can easily generate any character as we want with proper text description as in Figure 4.
 As shown in the image grid,
 text-to-image generated images are like brand-new characters,
-i.e. there is hard to find the exact same style character in existing anime as in StyleGAN generated images.
-\begin{figure}[h]
+i.e. there is hard to find the exact same style character in existing anime as in StyleGAN generated images as in Figure 4.
+\begin{figure}[]
     \begin{center}
-    \includegraphics[width=0.78\textwidth]{img/waifu_diffusion.png}
+    \includegraphics[width=\textwidth]{img/waifu_diffusion.png}
     \end{center}
     \caption{
         Waifu Diffusion:
@@ -84,3 +84,5 @@ i.e. there is hard to find the exact same style character in existing anime as i
         and the generated images are under the text descriptions \cite{WaifuDiffusion}.
     }
 \end{figure}
+
+\newpage
