used a lot of 'I'

--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -4,5 +4,6 @@ With the rapid growth of big data and image resources, computer scientists are a
 Considering the tremendous net worth of the Japanese anime industry and related products, drawing and animation have become one of the most important supports of the economy.
 When AI was introduced as an ``artist'' and won fine arts competition, the opinions from the animation industry started to diverge.
 In this paper, I compare some of the most popular models for the art generation, focusing on the anime drawing generation.
+Furthermore, I will address some common issues in model training in terms of the development of Japanese popular culture.
 In addition, I analyze the impact of AI artists on the Japanese animation industry along with the opinion of the public and from the related fields of drawing and arts.
 
