--- a/src/analysis_industry.tex
+++ b/src/analysis_industry.tex
@@ -63,8 +63,10 @@ Secondly, Sahbegovic mentions that generative AI models amplify plagiarism in tw
    
 The first type of access to plagiarism is due to LDMs' fantastic ability of semantic 
 synthesis with given conditional reference.
+Personally, I think this issue could be resolved by not exposing unfinished drawing drafts to the public.
 And the second type plagiarism is caused by the nature of machine learning:
 taking information from the existing dataset and produce a combination of these old data.
+In this case, I argue that better data-preprocessing and selection could contribute to this to a large extent.
 \begin{figure}[h]
      \centering
      \begin{subfigure}[b]{0.49\textwidth}
