--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \begin{flushleft}
 
 
-{\Large\bf Image Generation Models and Their Impact on Japanese Anime Industry} \\
+{\Large\bf Image Generation Models and Their Impact on the Japanese Anime Industry} \\
 %%%%First page name, class, etc
 Ethan He \\
 
