--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,17 +1,17 @@
 \subsection*{Conclusion}
 
-Although the booming of AI-drawing after the release of LDMs has also increased
-the possible of anime drawing by AI,
-there are still concerns about AI anime-drawing.
-The first issue is that machine learning models often pay more attention on common features
+Although the booming of AI drawing after the release of LDMs has also increased
+the possibility of anime drawing by AI,
+there are still concerns about AI anime drawing.
+The first issue is that machine learning models often pay more attention to common features
 in the training dataset,
-instead trying to understand the reason that led to these features.
-For example, shojo style is a way to represent the emotion and psychological movements,
+instead of trying to understand the reason that led to these features.
+For example, the shojo style is a way to represent emotion and psychological movements,
 but is not the goal of anime drawing.
-Secondly, I concludes that there are still remaining ethical issue on AI anime drawing.
-These two issues should be considered when integrating AI models into the production.
-Furthermore, style learning based on GAN requires high quality data that has similar styles and large in amount,
+Secondly, I conclude that there is still a remaining ethical issue in AI anime drawing.
+These two issues should be considered when integrating AI models into production.
+Furthermore, style learning based on GAN requires high-quality data that have similar styles and large amounts,
 whereas text-to-image generating models cannot keep the consistency of style of a character,
 thus is hard to use in real anime production.
 Therefore, I believe that style-controlled LDMs might have great potential in the anime industry if 
-both issues, especially ethical issue, can be resolved.
+both issues, especially ethical issues, can be resolved.
