--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,8 +1,8 @@
 \subsection*{Introduction}
 \par
-Computer vision and image processing is one of the most popular field of computer science. 
+Computer vision and image processing are one of the most popular fields of computer science. 
 Scientists interpret images as matrices, as images are displaced as a rectangular formation of pixels on our screen.
-The academia and industry has mad multiple attempts to generate high quality images
+Academia and industry have made multiple attempts to generate high-quality images
 \cite{
     pmlr-v37-gregor15, 
     Qiao_2019_CVPR, 
@@ -12,31 +12,31 @@ The academia and industry has mad multiple attempts to generate high quality ima
     Rombach2022High,
     He_2022_CVPR,
 }.
-The task of image generation also various,
+The task of image generation also varies,
 but the most studied directions are 
 random noise to image,
-text description to image,
+the text description to the image,
 and incomplete image to completed image.
 Among these models, Generative Adversarial Networks (GAN) \cite{Goodfellow2020Generative} and Latent Diffusion Models (LDM) \cite{Rombach2022High} are more commonly used for images that are related to art, for example, photography and drawing.
 
 \par
-The wave of generative AI is not limited to the computer science related academia and industry. 
-Jason Allen's artifact created with Midjourney\cite{Midjourney} won the first place at the Colorado State Fair's fine arts competition in September 2022 \cite{Teoh2022Art}.
+The wave of generative AI is not limited to computer science related academia and industry. 
+Jason Allen's artifact created with Midjourney\cite{Midjourney} won first place at the Colorado State Fair's fine arts competition in September 2022 \cite{Teoh2022Art}.
 The editor Teoh \cites{Teoh2022Art} further reported that 
-``Although the two judges were unaware that Allen's submission was AI-generated, but they added that it wouldn't change their decision because they were looking for `how the art tells a story and how it invokes spirit' instead.''
-This clear indicates that the text-to-image generation are capable for story telling and spirit invoking based on the inputted text description.
+``Although the two judges were unaware that Allen's submission was AI-generated, they added that it wouldn't change their decision because they were looking for `how the art tells a story and how it invokes spirit' instead.''
+This clearly indicates that the text-to-image generation is capable for storytelling and spirit invoking based on the inputted text description.
 
 \par
-Aoi also stated that generative models are about to capture human feelings toward the objects from the text input \cite{Aoi2022Stable}.
+Aoi also stated that generative models are about capturing human feelings toward the objects from the text input \cite{Aoi2022Stable}.
 Aoi illustrate that both Midjourney and Diffusion model can understand
 {\it kawaii} (cute).
 {\it Kawaii} is the signature of broadening Japanese culture to the global,
 which was created at the time Japanese domestic focus shifted from production to consumption \cite{Yano2013Pink}.
 Based on that idea,
 % ! use of I
-I argue that text-to-image models also has the power to generate anime girl characters,
-which is one of the most reflective genre of the Japanese idea of {\it kawaii}.
-In fact, there are examples of customized version of both GAN and Diffusion for anime character generation
+I argue that text-to-image models also have the power to generate anime girl characters,
+which is one of the most reflective genres of the Japanese idea of {\it kawaii}.
+In fact, there are examples of a customized version of both GAN and Diffusion for anime character generation
 \cite{
     Jin2017Towards,
     Ruan2022Anime,
